--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
     <title>About</title>
 </head>
 <body>
-    <div class = "mx-0 g-0">
+    <div class = "mx-0 g-0 body">
          <div id="mySidebar" class="sidebar hidden-pc">
             <div class = "row g-0 p-0">
                 <div class="col-lg">
                     <a href="javascript:void(0)" class="closebtn sidebarLink " onclick="closeNav()">&times;</a>
                     <a href="index.html" class="sidebarLink">About</a>
-                    <a href="Animation.html" class="sidebarLink">Animation</a>
                     <a href="IandD.html" class="sidebarLink">Illustration and design</a>
                     <a href="Unity.html" class="sidebarLink">Unity</a>
                     <a href="InP.html" class="sidebarLink">In Progress</a>
@@ -41,32 +40,32 @@
             </div>
         </div>
         <div class="row rectangle" id="RoundCorners">
-            <div class="col-lg-8">
-                <img id="RoundCorners"src="https://i.imgur.com/oUMk1mS.jpg" class="img-fluid" alt="Photo of Rachael Nordby">
+            <div class="col-lg-7 CenterMobile">
+                <img id="RoundCorners"src="https://i.imgur.com/Tkab65M.jpg" class="img" alt="Photo of Rachael Nordby">
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-5">
                 <div  id="RoundCorners">
                     <div class="textPadding">
                     <button class="openbtn hidden-pc" onclick="openNav()">&#9776;</button>
-                    <h1 class="header"> About Me</h1>
-                    <p class="text ">
+                    <h1 class="header DivCenter"> About Me</h1>
+                    <p class="text DivCenter">
                         My name is Rachael Nordby and I am a second
-                        year student at Boise State in the Games and Interactive Mobile Media major.
+                        year student at Boise State in the Games and Interactive Mobile Media major
                         Through my major so far I have had the chance to work on various 2D unity games.
                         I have also had the chance to flex my creative muscles learning animation and taking what
                         I’ve learned and making it a part of my personal projects. I would describe myself as optimistic
                         and eager to work and to continue learning about the field of computing and video games.
                     </p>
                     </div>
-                    <h1 class="header">
+                    <h1 class="header DivCenter">
                         Find Me At
                     </h1>
-                    <div class="center iconPadding"> 
-                        <img src="https://img.icons8.com/ios/50/null/apple-mail.png" class="icon"/>
-                        <img src="https://img.icons8.com/ios-filled/50/null/github.png" class="icon"/>
-                        <img src="https://img.icons8.com/ios-filled/50/null/twitter.png" class="icon"/>
-                        <img src="https://img.icons8.com/ios-filled/50/null/microphone--v1.png" class="icon"/>
-                        <img src="https://img.icons8.com/ios-filled/50/null/linkedin.png" class="icon"/>
+                    <div class="iconPadding DivCenter"> 
+                        <a href="mailto:rachkla@gmail.com" title="Email"><img src="https://img.icons8.com/ios/50/null/apple-mail.png" class="icon"/></a>
+                        <a href="https://github.com/SarcasticBubble" title="GitHub"><img src="https://img.icons8.com/ios-filled/50/null/github.png" class="icon"/></a>
+                        <a href="https://twitter.com/SarcasticBubbl" title="Twitter"><img src="https://img.icons8.com/ios-filled/50/null/twitter.png" class="icon"/></a>
+                        <a href="https://www.castingcall.club/windwaker200" title="Casting Call Club"><img src="https://img.icons8.com/ios-filled/50/null/microphone--v1.png" class="icon"/></a>
+                        <a href="https://www.linkedin.com/in/rachaelklassennordby/" title="Linkedin"><img src="https://img.icons8.com/ios-filled/50/null/linkedin.png" class="icon"/></a>
                         
                     </div>  
                 </div>
