--- a/IandD.html
+++ b/IandD.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Toto&family=Solitreo&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="StyleSheet1.css">
+    <link rel="stylesheet" href="StyleSheet2.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -15,11 +15,10 @@
     <title>Illustration and Design</title>
 </head>
 <body>
-
+  <div class="mx-2 g-2">
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn sidebarLink " onclick="closeNav()">&times;</a>
         <a href="index.html" class="sidebarLink">About</a>
-        <a href="Animation.html" class="sidebarLink">Animation</a>
         <a href="IandD.html" class="sidebarLink">Illustration and design</a>
         <a href="Unity.html" class="sidebarLink">Unity</a>
         <a href="InP.html" class="sidebarLink">In Progress</a>
@@ -44,11 +43,59 @@
       </div>
 
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 textPadding rectangle" id="BottomRounded">
             <button class="openbtn" onclick="openNav()">&#9776;</button>
-            <h1>Page coming soon!</h1>
+            <h1 class="header">Illustration</h1>
         </div>
+      </div>
+    <div class="row">
+      <div class="col-lg-4 CenterMobile">
+        <img id="RoundCorners" src="https://i.imgur.com/QqFERqP.png" class="img-fluid a" alt="Digital drawing of Carnage">
+      </div>
+      <div class="col-lg-4 CenterMobile">
+        <img id="RoundCorners" src="https://i.imgur.com/7x5Oq2d.png" class="img-fluid a" alt="Digital drawing of Leo and Claire">
+      </div>
+      <div class="col-lg-4 CenterMobile">
+        <img id="RoundCorners" src="https://i.imgur.com/HCcLEKX.png" class="img-fluid a" alt="Digital drawing of a mermaid and her son">
+      </div>
     </div>
+    <div class="row">
+      <div class="col-12 Break">
+        <h1 class="header textPadding"> Design</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 CenterMobile">
+        <img id="RoundCorners" src="https://i.imgur.com/HP0NTGf.png" class="img-fluid a" alt="Digital drawing of a mermaid and her son">
+      </div>
+      <div class="col-lg-4 CenterMobile ">
+        <img id="RoundCorners" src="https://i.imgur.com/31ijPyw.png" class="img-fluid a" alt="Digital drawing of a mermaid and her son">
+      </div>
+      <div class="col-lg-4 CenterMobile">
+        <img id="RoundCorners" src="https://i.imgur.com/chGW7x1.png" class="img-fluid a" alt="Digital drawing of a mermaid and her son">
+      </div>
+    </div>
+      <div class="row">
+        <div class="col-12 Break">
+            <h1 class="header textPadding"> Animation</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-1"></div>
+        <div class="col-lg-10 CenterMobile">
+          <div class="ratio ratio-16x9 ">
+            <iframe class="vidPad" src="https://www.youtube.com/embed/vJBgEyhnffc" title="The Great Gnome Detective" frameborder="0"allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="col-lg-1"></div>
+        <div class="row">
+        <div class="col-lg-12 CenterAnim">
+          <img id="RoundCorners"  src="https://i.imgur.com/HOy92Qm.gif" class="img-fluid a" alt="Digital drawing of a mermaid and her son">
+          <img id="RoundCorners"  src="https://i.imgur.com/pHFJVy1.gif" class="img-fluid a" alt="Digital drawing of a mermaid and her son">
+        </div>
+      </div>
+      </div>
+  </div>
     <script>
         /* Set the width of the sidebar to 250px and the left margin of the page content to 250px */
 function openNav() {
