Removed unused pages and added viewport meta tag

--- a/Unity.html
+++ b/Unity.html
@@ -3,6 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <meta name='viewport' content='width=device-width, initial-scale=1' />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Toto&family=Solitreo&display=swap" rel="stylesheet">
@@ -19,11 +20,8 @@
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn sidebarLink " onclick="closeNav()">&times;</a>
         <a href="index.html" class="sidebarLink">About</a>
-        <a href="Animation.html" class="sidebarLink">Animation</a>
         <a href="IandD.html" class="sidebarLink">Illustration and design</a>
         <a href="Unity.html" class="sidebarLink">Unity</a>
-        <a href="InP.html" class="sidebarLink">In Progress</a>
-        <a href="Contact.html" class="sidebarLink">Contact</a>
         <br>
         <br>
         <br>
