Finished Unity Page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="javascript:void(0)" class="closebtn sidebarLink " onclick="closeNav()">&times;</a>
                     <a href="index.html" class="sidebarLink">About</a>
                     <a href="IandD.html" class="sidebarLink">Illustration and design</a>
-                    <a href="Unity.html" class="sidebarLink">Unity</a>
+                    <a href="Unity.html" class="sidebarLink">Game Developemt</a>
                     <br>
                     <br>
                     <br>
@@ -34,7 +34,7 @@
                 <div class = "col-lg">
                     <hr class="footer">
                     <div class="footer center">
-                        <p>contact icons by <a class="footer" href="https://icons8.com/">Icons8</a></p>
+                        <p>Contact icons by <a class="footer" href="https://icons8.com/">Icons8</a></p>
                     </div>
                 </div>
             </div>
@@ -64,7 +64,6 @@
                         <a href="mailto:rachkla@gmail.com" title="Email"><img src="https://img.icons8.com/ios/50/null/apple-mail.png" class="icon"/></a>
                         <a href="https://github.com/SarcasticBubble" title="GitHub"><img src="https://img.icons8.com/ios-filled/50/null/github.png" class="icon"/></a>
                         <a href="https://twitter.com/SarcasticBubbl" title="Twitter"><img src="https://img.icons8.com/ios-filled/50/null/twitter.png" class="icon"/></a>
-                        <a href="https://www.castingcall.club/windwaker200" title="Casting Call Club"><img src="https://img.icons8.com/ios-filled/50/null/microphone--v1.png" class="icon"/></a>
                         <a href="https://www.linkedin.com/in/rachaelklassennordby/" title="Linkedin"><img src="https://img.icons8.com/ios-filled/50/null/linkedin.png" class="icon"/></a>
                         
                     </div>  
