--- a/Unity.html
+++ b/Unity.html
@@ -1,67 +1,122 @@
 ﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    <meta name='viewport' content='width=device-width, initial-scale=1' />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Toto&family=Solitreo&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="StyleSheet1.css">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
-    <title>Unity</title>
-</head>
-<body>
 
+<head>
+  <meta charset="utf-8" />
+  <meta name='viewport' content='width=device-width, initial-scale=1' />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Toto&family=Solitreo&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link rel="stylesheet" href="StyleSheet2.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <title>Game Developemt</title>
+</head>
+
+<body>
+  <div class="mx-2 g-2">
     <div id="mySidebar" class="sidebar">
-        <a href="javascript:void(0)" class="closebtn sidebarLink " onclick="closeNav()">&times;</a>
-        <a href="index.html" class="sidebarLink">About</a>
-        <a href="IandD.html" class="sidebarLink">Illustration and design</a>
-        <a href="Unity.html" class="sidebarLink">Unity</a>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <hr class="footer">
-        <div class="footer center">
-        <p>Technology icons by <a class="footer" href="https://icons8.com/">Icons8</a></p>
+      <a href="javascript:void(0)" class="closebtn sidebarLink " onclick="closeNav()">&times;</a>
+      <a href="index.html" class="sidebarLink">About</a>
+      <a href="IandD.html" class="sidebarLink">Illustration and design</a>
+      <a href="Unity.html" class="sidebarLink">Game Developemt</a>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <hr class="footer">
+      <div class="footer center">
+        <p>Contact icons by <a class="footer" href="https://icons8.com/">Icons8</a></p>
+      </div>
+    </div>
+
+
+    <div class="row">
+      <div class="col-12 textPadding rectangle" id="BottomRounded">
+        <button class="openbtn" onclick="openNav()">&#9776;</button>
+        <h1 class="header">Game Developemt</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 textPadding">
+        <h3 class="subHeader">Duckies Dungeon:</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-8 CenterMobile">
+        <div class="ratio ratio-16x9 ">
+          <iframe class="vidPad" src="https://www.youtube.com/embed/hDnaIA3-ZTc" title="Duckies Dungeon Trailer"
+            frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
-
-      <div class="row">
-        <div class="col-12">
-            <button class="openbtn" onclick="openNav()">&#9776;</button>
-            <h1>Page coming soon!</h1>
-        </div>
+      <div class="col-lg-4 CenterMobile textPadding">
+        <p>Duckies dungeon was my first foray into unity and game development. It was a solo assignment in my first year
+          Unity class. Through it I was able to gain hands-on knowledge of a lot of the unity basics and C#. The premise
+          of the game is simple: a duck has run out of bread and he must go on an adventure through a dungeon to get
+          more. One day I would like to update this game and make it a proper dungeon crawler like my original vision
+          but for now it is an example of what can be achieved with basic knowledge and a lot of determination. While
+          lots of what I did in this game seems easy nowI was particularly proud of what I was able to achieve with the
+          slow down traps and the following enemies. I was able to create both by repurposing code I had previously seen
+          and manipulating it to fit my needs. </p>
+      </div>
     </div>
-    <script>
+    <div class="row">
+      <div class="col-12 textPadding">
+        <h3 class="subHeader">OverGrown:</h3>
+      </div>
+      <div class="row">
+        <div class="col-lg-8 CenterMobile">
+          <div class="ratio ratio-16x9 ">
+            <iframe class="vidPad" src="https://www.youtube.com/embed/TZLQC_KgSyc" title="Duckies Dungeon Trailer"
+              frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="col-lg-4 CenterMobile textPadding">
+          <p> I started OverGrown, a working title, as part of a game jam. Per the rules of the game jam all games had
+            to be made individually and all assets had to be made by the competitors. Sadly I didn’t make it much
+            further than creating assets and starting to implement code. As this was my first game jam and first time
+            creating any sort of big project on my own in such a short period of time there was a lot I was able to
+            learn from the experience.
+            This
+            failure to complete the game has given me a sense of how long things can truly take when it comes to game
+            development but also a better sense of how time must be managed if I were to do something like this again.
+            On the Unity side of things I was able to explore parts of the engine I had never used before. I was able to
+            create layered tile maps for easy level building. I learned how to build a camera that smoothly follows the
+            player through different areas while still remaining in bounds. The newest thing to me in this project is
+            state machines, which seemed very daunting at first, but I how have an apprication for what they are able to
+            do and
+            their role in unity game development.</p>
+        </div>
+      </div>
+      <script>
         /* Set the width of the sidebar to 250px and the left margin of the page content to 250px */
-function openNav() {
-  document.getElementById("mySidebar").style.width = "250px";
-  document.getElementById("main").style.marginLeft = "250px";
-}
+        function openNav() {
+          document.getElementById("mySidebar").style.width = "250px";
+          document.getElementById("main").style.marginLeft = "250px";
+        }
 
-/* Set the width of the sidebar to 0 and the left margin of the page content to 0 */
-function closeNav() {
-  document.getElementById("mySidebar").style.width = "0";
-  document.getElementById("main").style.marginLeft = "0";
-} 
-    </script>
+        /* Set the width of the sidebar to 0 and the left margin of the page content to 0 */
+        function closeNav() {
+          document.getElementById("mySidebar").style.width = "0";
+          document.getElementById("main").style.marginLeft = "0";
+        } 
+      </script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
