--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 ﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="utf-8" />
     <meta name='viewport' content='width=device-width, initial-scale=1' />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Toto&family=Solitreo&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="StyleSheet1.css">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>About</title>
 </head>
+
 <body>
-    <div class = "mx-0 g-0 body">
-         <div id="mySidebar" class="sidebar hidden-pc">
-            <div class = "row g-0 p-0">
+    <div class="mx-0 g-0 body">
+        <div id="mySidebar" class="sidebar hidden-pc">
+            <div class="row g-0 p-0">
                 <div class="col-lg">
                     <a href="javascript:void(0)" class="closebtn sidebarLink " onclick="closeNav()">&times;</a>
                     <a href="index.html" class="sidebarLink">About</a>
@@ -30,8 +30,8 @@
                     <br>
                 </div>
             </div>
-            <div class = "row g-0 p-0">
-                <div class = "col-lg">
+            <div class="row g-0 p-0">
+                <div class="col-lg">
                     <hr class="footer">
                     <div class="footer center">
                         <p>Contact icons by <a class="footer" href="https://icons8.com/">Icons8</a></p>
@@ -41,32 +41,37 @@
         </div>
         <div class="row rectangle" id="RoundCorners">
             <div class="col-lg-7 CenterMobile">
-                <img id="RoundCorners"src="https://i.imgur.com/Tkab65M.jpg" class="img" alt="Photo of Rachael Nordby">
+                <img id="RoundCorners" src="https://i.imgur.com/Tkab65M.jpg" class="img" alt="Photo of Rachael Nordby">
             </div>
             <div class="col-lg-5">
-                <div  id="RoundCorners">
+                <div id="RoundCorners">
                     <div class="textPadding">
-                    <button class="openbtn hidden-pc" onclick="openNav()">&#9776;</button>
-                    <h1 class="header DivCenter"> About Me</h1>
-                    <p class="text DivCenter">
-                        My name is Rachael Nordby and I am a second
-                        year student at Boise State in the Games and Interactive Mobile Media major
-                        Through my major so far I have had the chance to work on various 2D unity games.
-                        I have also had the chance to flex my creative muscles learning animation and taking what
-                        I’ve learned and making it a part of my personal projects. I would describe myself as optimistic
-                        and eager to work and to continue learning about the field of computing and video games.
-                    </p>
+                        <button class="openbtn hidden-pc" onclick="openNav()">&#9776;</button>
+                        <h1 class="header DivCenter"> Rachael Norbdy</h1>
+                        <p class="text DivCenter">
+                            I am a second
+                            year student at Boise State in the Games and Interactive Mobile Media major
+                            Through my major so far I have had the chance to work on various 2D unity games.
+                            I have also had the chance to flex my creative muscles learning animation and taking what
+                            I’ve learned and making it a part of my personal projects. I would describe myself as
+                            optimistic
+                            and eager to work and to continue learning about the field of computing and video games.
+                        </p>
                     </div>
                     <h1 class="header DivCenter">
                         Find Me At
                     </h1>
-                    <div class="iconPadding DivCenter"> 
-                        <a href="mailto:rachkla@gmail.com" title="Email"><img src="https://img.icons8.com/ios/50/null/apple-mail.png" class="icon"/></a>
-                        <a href="https://github.com/SarcasticBubble" title="GitHub"><img src="https://img.icons8.com/ios-filled/50/null/github.png" class="icon"/></a>
-                        <a href="https://twitter.com/SarcasticBubbl" title="Twitter"><img src="https://img.icons8.com/ios-filled/50/null/twitter.png" class="icon"/></a>
-                        <a href="https://www.linkedin.com/in/rachaelklassennordby/" title="Linkedin"><img src="https://img.icons8.com/ios-filled/50/null/linkedin.png" class="icon"/></a>
-                        
-                    </div>  
+                    <div class="iconPadding DivCenter">
+                        <a href="mailto:rachkla@gmail.com" title="Email"><img
+                                src="https://img.icons8.com/ios/50/null/apple-mail.png" class="icon" /></a>
+                        <a href="https://github.com/SarcasticBubble" title="GitHub"><img
+                                src="https://img.icons8.com/ios-filled/50/null/github.png" class="icon" /></a>
+                        <a href="https://twitter.com/SarcasticBubbl" title="Twitter"><img
+                                src="https://img.icons8.com/ios-filled/50/null/twitter.png" class="icon" /></a>
+                        <a href="https://www.linkedin.com/in/rachaelklassennordby/" title="Linkedin"><img
+                                src="https://img.icons8.com/ios-filled/50/null/linkedin.png" class="icon" /></a>
+
+                    </div>
                 </div>
             </div>
         </div>
@@ -78,17 +83,20 @@
     <script>
         /* Set the width of the sidebar to 250px and the left margin of the page content to 250px */
         function openNav() {
-        document.getElementById("mySidebar").style.width = "250px";
-        document.getElementById("main").style.marginLeft = "250px";
+            document.getElementById("mySidebar").style.width = "250px";
+            document.getElementById("main").style.marginLeft = "250px";
         }
 
         /* Set the width of the sidebar to 0 and the left margin of the page content to 0 */
         function closeNav() {
-        document.getElementById("mySidebar").style.width = "0";
-        document.getElementById("main").style.marginLeft = "0";
+            document.getElementById("mySidebar").style.width = "0";
+            document.getElementById("main").style.marginLeft = "0";
         } 
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
