Added stand alone design page
Created design page. Added VocabVerse wireframe and prototype video to a tab system.

--- a/IandD.html
+++ b/IandD.html
@@ -20,7 +20,8 @@
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn sidebarLink " onclick="closeNav()">&times;</a>
       <a href="index.html" class="sidebarLink">About</a>
-      <a href="IandD.html" class="sidebarLink">Illustration and design</a>
+      <a href="IandD.html" class="sidebarLink">Illustration and Animation</a>
+      <a href="Design.html" class="sidebarLink">Design</a>
       <a href="Unity.html" class="sidebarLink">Game Developemt</a>
       <br>
       <br>
@@ -63,25 +64,6 @@
     </div>
     <div class="row">
       <div class="col-12 Break">
-        <h1 class="header textPadding"> Design</h1>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4 CenterMobile">
-        <img id="RoundCorners" src="https://i.imgur.com/HP0NTGf.png" class="img-fluid a"
-          alt="Gnome Costume Design">
-      </div>
-      <div class="col-lg-4 CenterMobile ">
-        <img id="RoundCorners" src="https://i.imgur.com/31ijPyw.png" class="img-fluid a"
-          alt="Emote">
-      </div>
-      <div class="col-lg-4 CenterMobile">
-        <img id="RoundCorners" src="https://i.imgur.com/chGW7x1.png" class="img-fluid a"
-          alt="Emote">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12 Break">
         <h1 class="header textPadding"> Animation</h1>
       </div>
     </div>
@@ -89,7 +71,7 @@
       <div class="col-lg-1"></div>
       <div class="col-lg-10 CenterMobile">
         <div class="ratio ratio-16x9 ">
-          <iframe class="vidPad" src="https://www.youtube.com/embed/vJBgEyhnffc" title="The Great Gnome Detective"
+          <iframe id="RoundCorners" class="vidPad" src="https://www.youtube.com/embed/vJBgEyhnffc" title="The Great Gnome Detective"
             frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
@@ -103,7 +85,7 @@
         </div>
       </div>
     </div>
-  </div>
+   
   <script>
     /* Set the width of the sidebar to 250px and the left margin of the page content to 250px */
     function openNav() {
