--- a/Unity.html
+++ b/Unity.html
@@ -20,7 +20,8 @@
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn sidebarLink " onclick="closeNav()">&times;</a>
       <a href="index.html" class="sidebarLink">About</a>
-      <a href="IandD.html" class="sidebarLink">Illustration and design</a>
+      <a href="IandD.html" class="sidebarLink">Illustration and Animation</a>
+      <a href="Design.html" class="sidebarLink">Design</a>
       <a href="Unity.html" class="sidebarLink">Game Developemt</a>
       <br>
       <br>
