--- a/Design.html
+++ b/Design.html
@@ -12,7 +12,7 @@
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="StyleSheet2.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <title>Illustration and Design</title>
+  <title>Design</title>
 </head>
 
 <body>
@@ -71,7 +71,7 @@
   <div class="row">
     <div class="col-12">
       <div class="DivCenter">
-        <h3 class="subHeader textPadding">VocabVerse</h3>
+        <h2 class="subHeader textPadding">VocabVerse</h2>
       </div>
     </div>
   </div>
@@ -82,6 +82,7 @@
       <div class="tab ">
         <button class="tablinks" onclick="openTab(event, 'Wireframe')" id="defaultOpen">Wireframe</button>
         <button class="tablinks" onclick="openTab(event, 'Prototype')">Working Prototype</button>
+        <button class="tablinks" onclick="openTab(event, 'Contirbution')">Project Contributions</button>
       </div>
       <div id="Wireframe" class="ratio ratio-16x9 tabcontent rectangle">
         <iframe id="RoundCorners" class="vidPad" height=100% width=auto
@@ -92,6 +93,9 @@
         <iframe id="RoundCorners" class="vidPad" src="https://www.youtube.com/embed/zrORpsg7KrA?si=8w5A1jq7Re3Nqdr7"
           title="VocabVerse Prototype" frameborder="0" allowfullscreen></iframe>
       </div>
+      <div id="Contirbution" class="ratio ratio-16x9 tabcontent rectangle">
+        <iframe id="RoundCorners" class="vidPad" src="https://www.youtube.com/embed/xQKHdv6Wsrw?si=27zl_vwvqpmJR5W2"
+          title="VocabVerse Contributions" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
 
