--- a/index - Copy.html
+++ b/index - Copy.html
@@ -22,8 +22,7 @@
                 <div class="col-lg">
                     <a href="javascript:void(0)" class="closebtn sidebarLink " onclick="closeNav()">&times;</a>
                     <a href="index.html" class="sidebarLink">About</a>
-                    <a href="IandD.html" class="sidebarLink">Illustration and Animation</a>
-                    <a href="Design.html" class="sidebarLink">Design</a>
+                    <a href="IandD.html" class="sidebarLink">Illustration and design</a>
                     <a href="Unity.html" class="sidebarLink">Game Developemt</a>
                     <br>
                     <br>
@@ -50,12 +49,13 @@
                         <button class="openbtn hidden-pc" onclick="openNav()">&#9776;</button>
                         <h1 class="header DivCenter"> Rachael Norbdy</h1>
                         <p class="text DivCenter">
-                            Rachael is currently a student at Boise State University and in her last semester of the Games and 
-                            Interactive Mobile Media program with an expected graduation date of May 2025.
-                            She has recently started working for the GimmWorks dev team as an artist and designer. She has a passion for 
-                            making things work and solving problems. She is always looking for ways to improve her skills and learn new things.
-                            When she isn't working on personal projects or assignments she spends her free time playing videos games, hanging out with 
-                            her two cats, and forcing her husband out on adventures.
+                            I am a second
+                            year student at Boise State in the Games and Interactive Mobile Media major
+                            Through my major so far I have had the chance to work on various 2D unity games.
+                            I have also had the chance to flex my creative muscles learning animation and taking what
+                            I’ve learned and making it a part of my personal projects. I would describe myself as
+                            optimistic
+                            and eager to work and to continue learning about the field of computing and video games.
                         </p>
                     </div>
                     <h1 class="header DivCenter">
@@ -66,6 +66,8 @@
                                 src="https://img.icons8.com/ios/50/null/apple-mail.png" class="icon" /></a>
                         <a href="https://github.com/SarcasticBubble" title="GitHub"><img
                                 src="https://img.icons8.com/ios-filled/50/null/github.png" class="icon" /></a>
+                        <a href="https://twitter.com/SarcasticBubbl" title="Twitter"><img
+                                src="https://img.icons8.com/ios-filled/50/null/twitter.png" class="icon" /></a>
                         <a href="https://www.linkedin.com/in/rachaelklassennordby/" title="Linkedin"><img
                                 src="https://img.icons8.com/ios-filled/50/null/linkedin.png" class="icon" /></a>
 
