--- a/Design.html
+++ b/Design.html
@@ -45,61 +45,42 @@
     <div class="row">
       <div class="col-12 textPadding rectangle" id="BottomRounded">
         <button class="openbtn" onclick="openNav()">&#9776;</button>
-        <h1 class="header">Emotes and Characters</h1>
-      </div>
-    </div>
-  </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-4 CenterMobile">
-      <img id="RoundCorners" src="https://i.imgur.com/HP0NTGf.png" class="img-fluid a" alt="Gnome Costume Design">
-    </div>
-    <div class="col-lg-4 CenterMobile ">
-      <img id="RoundCorners" src="https://i.imgur.com/31ijPyw.png" class="img-fluid a" alt="Emote">
-    </div>
-    <div class="col-lg-4 CenterMobile">
-      <img id="RoundCorners" src="https://i.imgur.com/chGW7x1.png" class="img-fluid a" alt="Emote">
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-12 Break">
-      <h1 class="header textPadding"> UI Design</h1>
-    </div>
-  </div>
-  </br>
-  <div class="row">
-    <div class="col-12">
-      <div class="DivCenter">
-        <h2 class="subHeader textPadding">VocabVerse</h2>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-1"></div>
-    <div class="col-lg-10 CenterMobile ">
-
-      <div class="tab ">
-        <button class="tablinks" onclick="openTab(event, 'Wireframe')" id="defaultOpen">Wireframe</button>
-        <button class="tablinks" onclick="openTab(event, 'Prototype')">Working Prototype</button>
-        <button class="tablinks" onclick="openTab(event, 'Contirbution')">Project Contributions</button>
-      </div>
-      <div id="Wireframe" class="ratio ratio-16x9 tabcontent rectangle">
-        <iframe id="RoundCorners" class="vidPad" height=100% width=auto
-          src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fdesign%2FRrWLqonR8S0N4O380dcZQp%2FVocabVerse-Prototype%3Fnode-id%3D0-1%26t%3D8wsq8x65vNtf7FNw-1"
-          allowfullscreen></iframe>
-      </div>
-      <div id="Prototype" class="ratio ratio-16x9 tabcontent rectangle">
-        <iframe id="RoundCorners" class="vidPad" src="https://www.youtube.com/embed/zrORpsg7KrA?si=8w5A1jq7Re3Nqdr7"
-          title="VocabVerse Prototype" frameborder="0" allowfullscreen></iframe>
-      </div>
-      <div id="Contirbution" class="ratio ratio-16x9 tabcontent rectangle">
-        <iframe id="RoundCorners" class="vidPad" src="https://www.youtube.com/embed/xQKHdv6Wsrw?si=27zl_vwvqpmJR5W2"
-          title="VocabVerse Contributions" frameborder="0" allowfullscreen></iframe>
-    </div>
-  </div>
-
-
+        <div class="row">
+          <div class="col-12 Break">
+            <h1 class="header textPadding"> UI/UX Design</h1>
+          </div>
+        </div>
+        </br>
+        <div class="row">
+          <div class="col-12">
+            <div class="DivCenter">
+              <h2 class="subHeader textPadding">VocabVerse</h2>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-1"></div>
+          <div class="col-lg-10 CenterMobile ">
+      
+            <div class="tab ">
+              <button class="tablinks" onclick="openTab(event, 'Wireframe')" id="defaultOpen">Wireframe</button>
+              <button class="tablinks" onclick="openTab(event, 'Prototype')">Working Prototype</button>
+              <button class="tablinks" onclick="openTab(event, 'Contirbution')">Project Contributions</button>
+            </div>
+            <div id="Wireframe" class="ratio ratio-16x9 tabcontent rectangle">
+              <iframe id="RoundCorners" class="vidPad" height=100% width=auto
+                src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fdesign%2FRrWLqonR8S0N4O380dcZQp%2FVocabVerse-Prototype%3Fnode-id%3D0-1%26t%3D8wsq8x65vNtf7FNw-1"
+                allowfullscreen></iframe>
+            </div>
+            <div id="Prototype" class="ratio ratio-16x9 tabcontent rectangle">
+              <iframe id="RoundCorners" class="vidPad" src="https://www.youtube.com/embed/zrORpsg7KrA?si=8w5A1jq7Re3Nqdr7"
+                title="VocabVerse Prototype" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div id="Contirbution" class="ratio ratio-16x9 tabcontent rectangle">
+              <iframe id="RoundCorners" class="vidPad" src="https://www.youtube.com/embed/xQKHdv6Wsrw?si=27zl_vwvqpmJR5W2"
+                title="VocabVerse Contributions" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
   <script>
     document.getElementById("defaultOpen").click();
     /* Set the width of the sidebar to 250px and the left margin of the page content to 250px */
